mythtv (0.23.0~trunk23567-0ubuntu2) lucid; urgency=low

  * debian/mythtv-backend.preinst:
    - Remove old /etc/default/mythtv-backend if not modified.  The upstart job
      still optionally use it, but it will cause the backend to not drop
      permissions with the old contents.

 -- Mario Limonciello <superm1@ubuntu.com>  Wed, 17 Feb 2010 22:11:48 -0600

mythtv (0.23.0~trunk23567-0ubuntu1) lucid; urgency=low

  * Bump builds to start with 0.23
  * debian/control: 
    - Fix vcs-bzr
    - Update depends to include ttf-droid, ttf-liberation, and ttf-dejavu.
      (LP: #224114)
    - Drop quilt build-dep, it appears to be included w/ dh7
    - Bump standards version
  * Introduces stable pulseaudio support (In Theory! :)) (LP: #311328)
  * Print message to stdout for MythTV.pm (LP: #327406)
  * debian/patches:
    - Drop 16_hal_shutdown.  No longer necessary after r23518.
  * Allow shutdowns when mythtv is running (LP: #174712)
    - Comes from upstream changeset r23455.
  * Mythbackend now supports the --user flag to drop permissions from
    upstream changeset r23521.
  * Use the upstart script from the upstream contrib directory instead.
    Now uses the --user flag to drop permissions. (LP: #445953)
  * Update 30_python26_transition for changes upstream.
  * mythtv-database.templates:
    - refer to the proper location for backups.
  * Switch to use the upstream backup scripts. (LP: #469792)
  * Helps with HDTV stuttering. (LP: #451394)
  * Drop old debian/myth-*.sh scripts since we now use dbus for shutdown
    and reboot etc.
  * Drop old debian/mythtv-backend.default.  It's just available for upgrades.
  * Drop old debian/mythtv-backend.init initscript.  We're only supporting
    upstart going forward with these builds.
  * Drop unnecessary patch, 02_settings_pro.dpatch
  * Drop unused patch, 23_video_device_symlinks.dpatch
  * Drop unused patch, 25_skiploop_option.dpatch
  * Convert packaging to dh7.
  * Convert packaging to source v3 (w/ quilt).