@@ -4,6 +4,11 @@ mythtv (0.23.0~trunk23567-0ubuntu2) lucid; urgency=low
     - Remove old /etc/default/mythtv-backend if not modified.  The upstart job
       still optionally use it, but it will cause the backend to not drop
       permissions with the old contents.
+  * debian/mythtv-database.templates:
+    - flush out unused templates.
+  * debian/rules:
+    - Add some confflags from ffmpeg's debian/rules to try a little harder
+      on armel and powerpc.
 
  -- Mario Limonciello <superm1@ubuntu.com>  Wed, 17 Feb 2010 22:11:48 -0600
 
